<resources>
    <string name="app_name">android-damage-reporter</string>
    <string name="action_settings">Settings</string>
    <string name="about_description">Choose Add new report to report damage. When status changes to closed, see further information about results under comments in details view.</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="hint_description">Type some description here…</string>
    <string name="menu_add_damage_report">Add damage report</string>
    <string name="menu_view_damage_reports">View damage reports</string>
    <string name="menu_about">About</string>
    <string name="version">Version</string>
    <string name="instructions">Instructions</string>
    <string name="room">Room</string>
    <string name="damage_report_title">Damage report title</string>
    <string name="comments">Comments</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="newText">New</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
</resources>
