<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/comments"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator2" />

        <TextView
            android:id="@+id/commentsTv"
            android:layout_width="0dp"
            android:layout_height="81dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comments" />

        <EditText
            android:id="@+id/nameTv"
            android:layout_width="348dp"
            android:layout_height="53dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/damage_report_title"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roomTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:text="@string/room"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/status"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/categoryTv"
            app:layout_constraintHorizontal_bias="0.629"
            app:layout_constraintStart_toEndOf="@+id/roomTv"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="36dp"
            android:text="@string/category"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv" />

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTv" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="224dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTv" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator1" />

        <EditText
            android:id="@+id/descriptionValueTv"
            android:layout_width="0dp"
            android:layout_height="81dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTv" />

        <EditText
            android:id="@+id/roomValueTv"
            android:layout_width="82dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/roomTv"
            app:layout_constraintStart_toStartOf="@+id/roomTv"
            app:layout_constraintTop_toBottomOf="@+id/roomTv" />

        <TextView
            android:id="@+id/statusValueTv"
            android:layout_width="82dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/newText"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/statusTv"
            app:layout_constraintStart_toStartOf="@+id/statusTv"
            app:layout_constraintTop_toBottomOf="@+id/statusTv" />

        <EditText
            android:id="@+id/categoryValueTv"
            android:layout_width="82dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/categoryTv"
            app:layout_constraintStart_toStartOf="@+id/categoryTv"
            app:layout_constraintTop_toBottomOf="@+id/categoryTv" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator2"
            app:layout_constraintVertical_bias="0.409" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.694"
            app:layout_constraintStart_toEndOf="@+id/saveBtn"
            app:layout_constraintTop_toBottomOf="@+id/separator2"
            app:layout_constraintVertical_bias="0.409" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.DrawerLayout>